FlyCameraController (partially finished commit, codex ran out of usage)